# Generated by Django 3.2.12 on 2023-04-13 20:05

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('novadata_utils', '0001_initial'),
        ('core', '0002_delete_pessoa'),
    ]

    operations = [
        migrations.CreateModel(
            name='Pessoa',
            fields=[
                ('novadatamodel_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='novadata_utils.novadatamodel')),
                ('nome', models.CharField(max_length=100, verbose_name='Nome')),
                ('email', models.EmailField(max_length=100, verbose_name='E-mail')),
                ('telefone', models.CharField(max_length=20, verbose_name='Telefone')),
                ('cpf_cnpj', models.CharField(max_length=30, verbose_name='CPF/CNPJ')),
            ],
            options={
                'verbose_name': 'Pessoa',
                'verbose_name_plural': 'Pessoas',
            },
            bases=('novadata_utils.novadatamodel',),
        ),
    ]
