# Generated by Django 3.2.12 on 2023-05-05 14:49

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('servicos', '0002_funcionario'),
        ('core', '0008_alter_notificacao_options'),
    ]

    operations = [
        migrations.CreateModel(
            name='Endereco',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('cep', models.CharField(max_length=9, verbose_name='CEP')),
                ('rua', models.CharField(max_length=100, verbose_name='Rua')),
                ('numero', models.CharField(max_length=15, verbose_name='Número')),
                ('bairro', models.CharField(max_length=100, verbose_name='Bairro')),
                ('referencia', models.CharField(blank=True, max_length=100, null=True, verbose_name='Ponto de referência')),
                ('cidade', models.CharField(max_length=100, null=True, verbose_name='Cidade')),
                ('estado', models.CharField(max_length=100, null=True, verbose_name='Estado')),
                ('latitude', models.CharField(blank=True, max_length=100, null=True, verbose_name='Latitude')),
                ('longitude', models.CharField(blank=True, max_length=100, null=True, verbose_name='Longitude')),
                ('cliente', models.OneToOneField(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='servicos.cliente', verbose_name='Cliente')),
            ],
            options={
                'verbose_name': 'Endereço',
                'verbose_name_plural': 'Endereços',
            },
        ),
    ]
