# Generated by Django 3.2.12 on 2023-05-08 21:58

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('novadata_utils', '0001_initial'),
        ('core', '0010_alter_pessoa_cpf_cnpj'),
    ]

    operations = [
        migrations.CreateModel(
            name='IncidenciaEstado',
            fields=[
                ('novadatamodel_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='novadata_utils.novadatamodel')),
                ('estado', models.CharField(max_length=100, verbose_name='Estado')),
                ('sigla', models.CharField(max_length=2, verbose_name='Sigla')),
                ('horas_sol_equivalentes', models.DecimalField(decimal_places=2, max_digits=5, verbose_name='Horas de sol equivalentes')),
            ],
            options={
                'verbose_name': 'Incidência por estado',
                'verbose_name_plural': 'Incidências por estado',
            },
            bases=('novadata_utils.novadatamodel',),
        ),
    ]
