# Generated by Django 3.2.12 on 2023-04-21 15:49

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('core', '0008_alter_notificacao_options'),
    ]

    operations = [
        migrations.CreateModel(
            name='Cliente',
            fields=[
                ('pessoa_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='core.pessoa')),
                ('termo_compromisso', models.FileField(blank=True, null=True, upload_to='termos_compromisso', verbose_name='Termo de compromisso')),
            ],
            options={
                'verbose_name': 'Cliente',
                'verbose_name_plural': 'Clientes',
            },
            bases=('core.pessoa',),
        ),
    ]
