# Generated by Django 3.2.12 on 2023-05-15 20:38

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('novadata_utils', '0001_initial'),
        ('servicos', '0006_delete_estacaosolar'),
    ]

    operations = [
        migrations.CreateModel(
            name='EstacaoSolar',
            fields=[
                ('novadatamodel_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='novadata_utils.novadatamodel')),
                ('nome', models.CharField(max_length=100, verbose_name='Nome')),
                ('quantidade_placas', models.IntegerField(verbose_name='Quantidade de placas necessárias')),
                ('consumo_mensal', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='Consumo mensal (kWh)')),
                ('geracao_mensal', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='Geração mensal (kWh)')),
                ('cliente', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='servicos.cliente', verbose_name='Cliente')),
            ],
            options={
                'verbose_name': 'Estação solar',
                'verbose_name_plural': 'Estações solares',
            },
            bases=('novadata_utils.novadatamodel',),
        ),
    ]
